# MiniDeen

./: CMakeLists.txt  LICENSE  README.md  avs_interface.cpp  main.cpp  minideen.cpp  minideen_engine.hpp  version.rc.in  vs_interface.cpp
src/: minideen.hpp  minideen_common.h  minideen_core.cpp  minideen_core_AVX2.cpp  minideen_core_SSE2.cpp  neo_minideen.hpp  version.hpp  version.rc  version.rc.in
wrapper/: avs_filter.hpp
